Add client
Allows user to register and log in/out, user is assigned a session on log in.
