# server/service/user/routes.go
@@ -2,6 +2,7 @@ package user
 
 import (
 	"fmt"
+	"log"
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
@@ -13,25 +14,32 @@ import (
 )
 
 type Handler struct {
-	store types.UserStore
+	store        types.UserStore
+	sessionStore types.SessionStore
 }
 
-func NewHandler(store types.UserStore) *Handler {
-	return &Handler{store: store}
+func NewHandler(store types.UserStore, sessionStore types.SessionStore) *Handler {
+	return &Handler{store: store, sessionStore: sessionStore}
 }
 
 func (h *Handler) RegisterRoutes(router *chi.Mux) {
 	router.Post("/login", h.handleLogin)
 	router.Post("/register", h.handleRegisterUser)
+
+	router.Group(func(r chi.Router) {
+		r.Use(auth.ProtectedRoute(h.store, h.sessionStore))
+		r.Post("/logout", h.handleLogoutUser)
+	})
+
 }
 
 // @Summary Logs a user in and authenticates them with a JWT access token
-// @Description Authenticates a user from an email and password
+// @Description Authenticates a user from an email and password and begins a session
 // @Tags User
 // @Accepts json
 // @Produce json
 // @Param Login body types.LoginUserPayload true "Login input"
-// @Success 200 {object} types.JWTToken
+// @Success 200 {object} types.SuccessfulLoginResponse
 // @Failure 400 {object} types.ErrorResponse
 // @Failure 401 {object} types.ErrorResponse
 // @Failure 422 {object} types.ErrorResponse
@@ -40,40 +48,72 @@ func (h *Handler) RegisterRoutes(router *chi.Mux) {
 func (h *Handler) handleLogin(w http.ResponseWriter, r *http.Request) {
 	var user types.LoginUserPayload
 	if err := utils.ParseJSON(r, &user); err != nil {
-		utils.WriteError(w, http.StatusBadRequest, err)
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("bad login payload"))
 		return
 	}
 
 	// validate the user payload
 	if err := utils.Validate.Struct(user); err != nil {
 		errors := err.(validator.ValidationErrors)
-		utils.WriteError(w, http.StatusUnprocessableEntity, fmt.Errorf("invalid payload %v\n", errors))
+		log.Printf("%s", errors)
+		utils.WriteError(w, http.StatusUnprocessableEntity, fmt.Errorf("invalid payload"))
 		return
 	}
 
 	// check if the user exists
 	u, err := h.store.GetUserByEmail(user.Email)
 	if err != nil {
-		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("user not found, invalid email: '%s' or password", user.Email))
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusBadRequest, fmt.Errorf("invalid email: '%s' or password", user.Email))
 		return
 	}
 
+	// does given pw match stored pw
 	if !auth.ComparePasswords(u.Password, []byte(user.Password)) {
+		log.Printf("%s", err)
 		utils.WriteError(w, http.StatusUnauthorized, fmt.Errorf("invalid email or password"))
 		return
 	}
 
-	secret := []byte(config.Envs.JWTSecret)
-	token, err := auth.CreateJWT(secret, u.ID)
+	secret := []byte(config.Envs.SessionSecret)
+
+	// generate session token
+	sessionToken, err := auth.CreateJWT(secret, u.ID)
 	if err != nil {
-		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't create JWT token"))
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't create session token, check server logs for errors"))
 		return
 	}
 
-	userJWT := types.JWTToken{Token: token}
+	// create session in database
+	sessionID, err := h.sessionStore.CreateSession(int64(u.ID))
+	if err != nil {
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't create session, check server logs for errors"))
+		return
+	}
+
+	// add session to cache
+	_, err = h.sessionStore.CacheSessionToken(sessionToken, sessionID)
+	if err != nil {
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't cache session, check server logs for errors"))
+		return
+	}
+
+	loginSuccessData := types.SuccessfulLoginResponse{
+		SessionToken: sessionToken,
+		User: types.UserResponse{
+			ID:        u.ID,
+			FirstName: u.FirstName,
+			LastName:  u.LastName,
+			Email:     u.Email,
+		},
+	}
 
 	// successfully logged in and given token
-	utils.WriteJSON(w, http.StatusOK, userJWT)
+	utils.WriteJSON(w, http.StatusOK, loginSuccessData)
 }
 
 // @Summary Registers a user in the database
@@ -89,6 +129,7 @@ func (h *Handler) handleLogin(w http.ResponseWriter, r *http.Request) {
 // @Failure 500 {object} types.ErrorResponse
 // @Router /api/v1/register [post]
 func (h *Handler) handleRegisterUser(w http.ResponseWriter, r *http.Request) {
+	// unmarshal user registration payload
 	var user types.RegisterUserPayload
 	if err := utils.ParseJSON(r, &user); err != nil {
 		utils.WriteError(w, http.StatusBadRequest, err)
@@ -98,7 +139,8 @@ func (h *Handler) handleRegisterUser(w http.ResponseWriter, r *http.Request) {
 	// validate the user payload
 	if err := utils.Validate.Struct(user); err != nil {
 		errors := err.(validator.ValidationErrors)
-		utils.WriteError(w, http.StatusUnprocessableEntity, fmt.Errorf("invalid payload %v\n", errors))
+		log.Printf("%s", errors)
+		utils.WriteError(w, http.StatusUnprocessableEntity, fmt.Errorf("invalid payload"))
 		return
 	}
 
@@ -116,7 +158,7 @@ func (h *Handler) handleRegisterUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// create new user
-	err = h.store.CreateUser(types.User{
+	id, err := h.store.CreateUser(types.User{
 		FirstName: user.FirstName,
 		LastName:  user.LastName,
 		Email:     user.Email,
@@ -128,5 +170,64 @@ func (h *Handler) handleRegisterUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// successfully created user
-	utils.WriteJSON(w, http.StatusCreated, nil)
+	// login workflow begins
+	secret := []byte(config.Envs.SessionSecret)
+
+	// generate session token
+	sessionToken, err := auth.CreateJWT(secret, id)
+	if err != nil {
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't create access token, check server logs for errors"))
+		return
+	}
+
+	// create session in database
+	sessionID, err := h.sessionStore.CreateSession(int64(id))
+	if err != nil {
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't create session, check server logs for errors"))
+		return
+	}
+
+	// add session to cache
+	_, err = h.sessionStore.CacheSessionToken(sessionToken, sessionID)
+	if err != nil {
+		log.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("couldn't cache session, check server logs for errors"))
+		return
+	}
+
+	loginSuccessData := types.SuccessfulLoginResponse{
+		SessionToken: sessionToken,
+	}
+
+	// successfully logged in and given token
+	utils.WriteJSON(w, http.StatusOK, loginSuccessData)
+}
+
+// @Summary Logs a user out
+// @Description Deletes sessions associated with user in cache and db
+// @Tags User
+// @Accepts json
+// @Produce json
+// @Param SessionToken body types.LogoutUserPayload true "Logout input"
+// @Success 204
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 500 {object} types.ErrorResponse
+// @Router /api/v1/logout [post]
+func (h *Handler) handleLogoutUser(w http.ResponseWriter, r *http.Request) {
+	// unmarshal user logout payload
+	// extract userID from token
+	sessionToken := r.Header.Get("Authorization")
+	userID := auth.GetUserIDFromContext(r.Context())
+	success, err := h.sessionStore.DestroySession(int64(userID), sessionToken)
+
+	if err != nil || !success {
+		fmt.Printf("%s", err)
+		utils.WriteError(w, http.StatusInternalServerError, fmt.Errorf("failed to logout user, check server logs for errors"))
+		return
+	}
+
+	// successfully logged out
+	utils.WriteJSON(w, http.StatusNoContent, nil)
 }
