# server/types/types.go
@@ -1,13 +1,18 @@
 package types
 
-import "time"
+import (
+	"time"
+
+	uuid "github.com/satori/go.uuid"
+)
 
 type ErrorResponse struct {
 	Error string `json:"error" example:"something went wrong"`
 }
 
-type JWTToken struct {
-	Token string `json:"token" example:"header.payload.signature"`
+type SuccessfulLoginResponse struct {
+	SessionToken string       `json:"sessionToken" example:"header.payload.signature"`
+	User         UserResponse `json:"user"`
 }
 
 type RegisterUserPayload struct {
@@ -22,6 +27,10 @@ type LoginUserPayload struct {
 	Password string `json:"password" validate:"required"`
 }
 
+type LogoutUserPayload struct {
+	SessionToken string `json:"sessionToken" example:"header.payload.signature"`
+}
+
 type User struct {
 	ID        int       `json:"id"`
 	FirstName string    `json:"firstName"`
@@ -31,10 +40,17 @@ type User struct {
 	CreatedAt time.Time `json:"createdAt"`
 }
 
+type UserResponse struct {
+	ID        int    `json:"ID"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+	Email     string `json:"email"`
+}
+
 type UserStore interface {
 	GetUserByEmail(email string) (*User, error)
 	GetUserByID(id int) (*User, error)
-	CreateUser(user User) error
+	CreateUser(user User) (int, error)
 }
 
 type Task struct {
@@ -45,7 +61,7 @@ type Task struct {
 	Deadline    time.Time `json:"deadline" validate:"required" example:"2006-01-02T15:04:00Z" faker:"-"`
 	Description string    `json:"description" validate:"required" faker:"sentence"`
 	IsCompleted bool      `json:"isCompleted" faker:"-"`
-	UserID      int       `json:"userId" validate:"required" faker:"oneof: 1, 2"`
+	UserID      int64     `json:"userID" validate:"required" faker:"oneof: 1, 2"`
 }
 
 type NewTask struct {
@@ -65,8 +81,8 @@ type (
 		IsCompleted bool      `json:"isCompleted" faker:"-"`
 	}
 	UpdateJotPayload struct {
-		JotID       string `json:"jotID"`
-		IsCompleted bool   `json:"isCompleted"`
+		JotID       int  `json:"jotID"`
+		IsCompleted bool `json:"isCompleted"`
 	}
 )
 
@@ -75,13 +91,30 @@ type TaskIDToDelete struct {
 }
 
 type TaskStore interface {
-	GetTasksByUserID(userId int64) ([]Task, error)
+	GetTasksByUserID(userID int64) ([]Task, error)
 	UpdateTaskByTaskID(editedTask Task) (Task, error)
-	DeleteTaskByTaskID(taskId TaskIDToDelete, userId int64) error
-	CreateTask(task NewTask, userId int64) (int, error)
+	DeleteTaskByTaskID(taskId TaskIDToDelete, userID int64) error
+	CreateTask(task NewTask, userID int64) (int, error)
 }
 
 type JotStore interface {
-	GetJotsByUserID(month int, userId int64) (Jots, error)
-	UpdateJotByJotID(jot UpdateJotPayload, userId int64) error
+	GetJotsByUserID(month int, userID int64) (Jots, error)
+	UpdateJotByJotID(jot UpdateJotPayload, userID int64) error
+}
+
+type SessionStore interface {
+	CreateSession(userID int64) (string, error)
+	ValidateSession(userID int64, uuid string) (bool, error)
+	CacheSessionToken(sessionToken string, sessionID string) (string, error)
+	ValidateSessionToken(sessionToken string) (string, error)
+	DestroySession(userID int64, sessionToken string) (bool, error)
+	ClearSessionFromCache(sessionToken string) (bool, error)
+}
+
+type RefreshTokenPayload struct {
+	RefreshToken uuid.UUID `json:"refreshToken" example:"abc-123-xyz-123"`
+}
+
+type SessionTokenResponse struct {
+	SessionToken string `json:"sessionToken" example:"header.payload.signature"`
 }
